# Tornel-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  client.cpp  communication.cpp  communication.hpp  define.hpp  enums.hpp  server.cpp  timeFunc.hpp  version.cpp  version.hpp
Apps/: App.cpp  App.hpp  Combat.cpp  Combat.hpp
Classes/: Singleton.hpp  communication.cpp  communication.hpp
Classes/CharEntities/: AIEntity.cpp  AIEntity.hpp  CombatEntity.cpp  CombatEntity.hpp  Hero.cpp  Hero.hpp
Classes/Equipment/: Effects.cpp  Effects.hpp  Equipment.cpp  Equipment.hpp
Classes/Indexes/: Index.hpp  IndexClasses.cpp  IndexClasses.hpp  IndexesIndex.cpp  IndexesIndex.hpp
Classes/Math/: math.cpp  math.hpp
Classes/Server/: ServerClient.cpp  ServerClient.hpp  Subserver.hpp  Subservers.cpp  Subservers.hpp  fonctor.cpp  fonctor.hpp
Classes/Skills/: Skill.cpp  Skill.hpp
Enums/: Combat.hpp  Equipment.hpp  communication.cpp  communication.hpp  serverEvents.cpp  serverEvents.hpp
global/: communication.cpp  communication.hpp  define.hpp  functions.cpp  functions.hpp
server/: ChangesLog.txt  FightSubserver.cpp  FightSubserver.hpp  ServerClients.cpp  ServerClients.hpp  fonctor.cpp  fonctor.hpp  main.cpp  structures.cpp  structures.hpp
server/old/: classesFromSrc.hpp  connections.cpp  connections.hpp
src/: AIControlledEntity.cpp  AIControlledEntity.hpp  ChangesLog.dox  ChangesLog.txt  Combat.cpp  Combat.hpp  Effects.cpp  Effects.hpp  Equipement.hpp  Equipment.cpp  Equipment.hpp  Hero.cpp  Hero.hpp  Index.cpp  Index.hpp  IndexClasses.cpp  IndexClasses.hpp  IndexesIndex.cpp  IndexesIndex.hpp  Menu.cpp  Menu.hpp  Screen.hpp  Skill.cpp  Skill.hpp  constants.cpp  constants.hpp  main.cpp  mathfuncs.cpp  mathfuncs.hpp  operators.cpp  operators.hpp
src/old/: LevelMap.cpp  LevelMap.hpp  MovingEntity.cpp  MovingEntity.hpp
